fix mobile overflow

--- a/css/gtdParticipants.css
+++ b/css/gtdParticipants.css
@@ -90,8 +90,11 @@
 .gtd-participants .filters .title a.download-csv {
     font-size: 10px;
     position: absolute;
-    top: 25px;
+    top: 15px;
     right: 13px;
+    height: 45px;
+    line-height: 45px;
+    overflow: hidden;
     border: 0 none;
 }
 .gtd-participants .filters #downloadCsv:before {
@@ -217,7 +220,7 @@
         font-size: 11px;
     }
     .gtd-participants .filters .title a.download-csv {
-        top: 23px;
+        top: 16px;
         right: 15px;
     }
     .gtd-participants .filters .filters__swimmer--bio > div,
